--- a/.github/workflows/1.3-create-xcsoar-files.yml
+++ b/.github/workflows/1.3-create-xcsoar-files.yml
@@ -69,6 +69,9 @@ jobs:
         file_pattern: 'guide_aires_securite_details.txt'
 
 
+
+
+
   add-version:
     if: github.ref == 'refs/heads/main' && github.repository == 'planeur-net/outlanding'
     needs: convert-to-xcsoar
@@ -97,12 +100,7 @@ jobs:
           sed -i "2i $versionInfo" ./guide_aires_securite_details.txt
 
           # Save commit message for future push
-          echo "LAST_COMMIT_MESSSAGE=`git log --format=%s -n 1 -- guide_aires_securite.cup`" >> $GITHUB_OUTPUT
-
-      - name: Create ZIP for XCSoar folder
-        run: |
-          echo "### Create ZIP to be copied to XCSoar folder"
-          zip guide_aires_securite.xcsoar.zip guide_aires_securite.cup guide_aires_securite_details.txt Pics/     
+          echo "LAST_COMMIT_MESSSAGE=`git log --format=%s -n 1 -- guide_aires_securite.cup`" >> $GITHUB_OUTPUT 
 
       - name: Pull repo before push
         run: |
@@ -111,13 +109,52 @@ jobs:
           cd ../outlanding
           git pull
 
-      
       # Push changes to repo    
       - name: Push changes into repo
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           repository: ./outlanding
           commit_message: ${{ steps.set_version.outputs.LAST_COMMIT_MESSSAGE }}
-          file_pattern: 'guide_aires_securite_details.txt guide_aires_securite.xcsoar.zip'
+          file_pattern: 'guide_aires_securite_details.txt'
+
+
+  create-zip:
+    if: github.ref == 'refs/heads/main' && github.repository == 'planeur-net/outlanding'
+    needs: add-version
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Clone this repo
+        uses: actions/checkout@v3
+        with:
+          path: ./outlanding
+
+      - name: Create ZIP for XCSoar folder
+        id: create-zip
+        run: |
+          echo "### Create ZIP to be copied to XCSoar folder"
+          cd ../outlanding
+          zip guide_aires_securite.xcsoar.zip guide_aires_securite.cup guide_aires_securite_details.txt Pics/     
+
+          # Save commit message for future push
+          echo "LAST_COMMIT_MESSSAGE=`git log --format=%s -n 1 -- guide_aires_securite.cup`" >> $GITHUB_OUTPUT 
+
+      - name: Pull repo before push
+        run: |
+          # push to repo
+          echo "Pulling latest version before push..."
+          cd ../outlanding
+          git pull
+
+      # Push changes to repo    
+      - name: Push changes into repo
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          repository: ./outlanding
+          commit_message: ${{ steps.create-zip.outputs.LAST_COMMIT_MESSSAGE }}
+          file_pattern: 'guide_aires_securite.xcsoar.zip'
 
 
