--- a/.github/workflows/1.3-create-xcsoar-files.yml
+++ b/.github/workflows/1.3-create-xcsoar-files.yml
@@ -106,7 +106,7 @@ jobs:
         run: |
           # push to repo
           echo "Pulling latest version before push..."
-          cd ../outlanding
+          cd ./outlanding
           git pull
 
       # Push changes to repo    
@@ -136,7 +136,7 @@ jobs:
         id: create-zip
         run: |
           echo "### Create ZIP to be copied to XCSoar folder"
-          cd ../outlanding
+          cd ./outlanding
           zip guide_aires_securite.xcsoar.zip guide_aires_securite.cup guide_aires_securite_details.txt Pics/     
 
           # Save commit message for future push
@@ -146,7 +146,7 @@ jobs:
         run: |
           # push to repo
           echo "Pulling latest version before push..."
-          cd ../outlanding
+          cd ./outlanding
           git pull
 
       # Push changes to repo    
