--- a/.github/workflows/1.3-create-xcsoar-files.yml
+++ b/.github/workflows/1.3-create-xcsoar-files.yml
@@ -1,6 +1,6 @@
 # Copy file to planeur.net FTP server
 
-name: 1.3 - Create XCSoar _details.txt + add version
+name: 1.3 - Create XCSoar _details.txt + version + zip
 
 # Controls when the workflow will run
 on:
