--- a/.github/workflows/1.3-create-xcsoar-files.yml
+++ b/.github/workflows/1.3-create-xcsoar-files.yml
@@ -92,6 +92,6 @@ jobs:
 
         # Save commit message for future push
         echo "LAST_COMMIT_MESSSAGE=`git log --format=%s -n 1 -- guide_aires_securite.cup`" >> $GITHUB_OUTPUT
-        git commit -a -m `git log --format=%s -n 1 -- guide_aires_securite.cup`
+        git commit -m `git log --format=%s -n 1 -- guide_aires_securite.cup`
         git push
 
