--- a/.github/workflows/1.3-create-xcsoar-files.yml
+++ b/.github/workflows/1.3-create-xcsoar-files.yml
@@ -53,9 +53,6 @@ jobs:
         echo "### Copy _details to outlanding repo location"
         cp ./guide_aires_securite_details.txt ../outlanding/
 
-        cd ../outlanding
-        git add ./guide_aires_securite_details.txt
-
 
     - name: Set version
       id: set_version
@@ -69,8 +66,6 @@ jobs:
         # Add version information
         sed -i "2i $versionInfo" ./guide_aires_securite_details.txt
 
-        git add guide_aires_securite_details.txt
-
 
 
     - name: Create ZIP for XCSoar folder
@@ -80,18 +75,10 @@ jobs:
         cd ./outlanding
         zip guide_aires_securite.xcsoar.zip guide_aires_securite.cup guide_aires_securite_details.txt Pics/     
 
-        git add guide_aires_securite.xcsoar.zip
 
-
-    - name: Pull repo before push
-      run: |
-        # push to repo
-        echo "Pulling latest version before push..."
-        cd ./outlanding
-        git pull
-
-        # Save commit message for future push
-        echo "LAST_COMMIT_MESSSAGE=`git log --format=%s -n 1 -- guide_aires_securite.cup`" >> $GITHUB_OUTPUT
-        git commit -m `git log --format=%s -n 1 -- guide_aires_securite.cup`
-        git push
+    - name: ⚙️ Push to repo
+      uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        repository: ./outlanding
+        commit_message: Test Ludovic
 
